--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ jwt:
   secret: ${JWT_SECRET}
   expire: ${JWT_EXPIRE}
 
+project:
+  upload:
+    path: ${UPLOAD_PATH}
+
 spring:
   application:
     name: spring04
