--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,15 @@ project:
 spring:
   application:
     name: spring04
+  cloud:
+    aws:
+      credentials:
+        access-key: ${AWS_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_KEY}
+      s3:
+        bucket: bbsso
+      region:
+        static: ap-northeast-2
   mail:
     host: smtp.gmail.com
     port: 587
