--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.2'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
