--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
+
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.2'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
